# symposium

./: Cargo.toml  Dockerfile  README.md
src/: lib.rs  main.rs  parcel.rs  router.rs  server.rs  test.rs  user.rs
static/: app.js  chat.html  index.html  login.html  login.js  style.css
test_tls/: cert.pem  key.rsa
www/: index.html
www/static/: app.js  style.css
