[package]
name = "symposium"
version = "0.1.0"
edition = "2021"

[lib]
name = "symposium"
path = "src/lib.rs"

[[bin]]
name = "symposium"
path = "src/main.rs"

[dependencies]
log = "0.4"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
warp = { version = "0.3", features = ["tls"] }
rand = "0.8"
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
